# harness-agent

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.en.md  README.md  opencode.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.harness/: known_pitfalls.md  progress.json
.harness/templates/: plan_template.json
.trae/rules/: rules.md
configs/: dev.yaml  test.yaml
docs/: DESIGN.md  PROJECT_MAP.md  context.md
docs/decisions/: ADR_TEMPLATE.md
scripts/: pre-push.ps1  pre-push.sh
src/harness_agent/: __init__.py  agent.py  cli.py
tasks/: task_plan.md
tests/: test_agent.py  test_cli.py
