[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-agent"
version = "0.1.0"
description = "PBH 协议驱动的自主代码修复代理"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "renjianguojinqianfan", email = "1419314553@qq.com"},
]
dependencies = [
    "typer>=0.9.0",
    "openai-agents",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
"harness-agent" = "harness_agent.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".harness/", "configs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"
